src/v7/CAPI_PVSystems.pas

        
    elem.DutyShape := Value;
    elem.DutyShapeObj := LoadShapeClass.Find(elem.DutyShape);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_yearly(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(elem) then
        Exit;
    Result := DSS_GetAsPAnsiChar(elem.YearlyShape);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_yearly(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(elem) then
        Exit;
        
    elem.YearlyShape := Value;
    elem.YearlyShapeObj := LoadShapeClass.Find(elem.YearlyShape);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Tdaily(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(elem) then
        Exit;
    Result := DSS_GetAsPAnsiChar(elem.DailyTShape);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Tdaily(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(elem) then
        Exit;

    elem.DailyTShape := Value;
    elem.DailyTShapeObj := TShapeClass.Find(elem.DailyTShape);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Tduty(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(elem) then
        Exit;
    Result := DSS_GetAsPAnsiChar(elem.DutyTShape);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Tduty(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(elem) then
        Exit;

    elem.DutyTShape := Value;
    elem.DutyTShapeObj := TShapeClass.Find(elem.DutyTShape);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Tyearly(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(elem) then
        Exit;

    Result := DSS_GetAsPAnsiChar(elem.YearlyTShape);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Tyearly(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(elem) then
        Exit;
        
    elem.YearlyTShape := Value;
    elem.YearlyTShapeObj := TShapeClass.Find(elem.YearlyTShape);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Pmpp(): Double; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := -1.0;  // not set
    if not _activeObj(elem) then
        Exit;
    Result := elem.pmpp;
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Pmpp(Value: Double); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(elem) then
        Exit;
    elem.pmpp := Value;
end;
//------------------------------------------------------------------------------
function PVSystems_Get_IrradianceNow(): Double; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := -1.0;  // not set
    if not _activeObj(elem) then
        Exit;
    Result := elem.IrradianceNow;
end;
//------------------------------------------------------------------------------
end.
